[gd_scene load_steps=4 format=3 uid="uid://6bbwr4qrdr57"]

[ext_resource type="Script" path="res://scenes/menu/pause/pause_menu.gd" id="1_2p2it"]
[ext_resource type="Texture2D" uid="uid://b6qs5hydy8ueq" path="res://resources/ui/rect128.png" id="2_78w1f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uwvco"]
texture = ExtResource("2_78w1f")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_2p2it")

[node name="ControlRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ControlRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ControlRoot/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="ControlRoot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_uwvco")
text = "Resume"

[node name="Exit" type="Button" parent="ControlRoot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_uwvco")
text = "Exit"

[connection signal="pressed" from="ControlRoot/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ControlRoot/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
